--- a/style.css
+++ b/style.css
@@ -7,12 +7,15 @@
 }
 
 body {background-color: white; font-size: 16px; font-family: 'IM Fell English', serif; color: #333;}
-header{margin-bottom: 1.0em; font-family: 'IM Fell English', serif;}
+header {margin-bottom: 1.0em; font-family: 'IM Fell English', serif;}
 
 h1,h2,h3 {margin: 0; padding: 0; font-weight: 900; color: black;}
 h1 {color: #031fc9;}
 section {margin-right: 210px;}
 img#mugShot {width: 200px; padding: 2px; border: 1px solid #003366; position: fixed; right: 5px; top: 5px; z-index: 2;}
+
+header h3 a {color: black; text-decoration: none;}
+header h3 a:hover {color: #031fc9; text-decoration: underline;}
 
 li.uf {list-style-image: url(bullet_uf.png);}
 li.odu {list-style-image: url(bullet_odu.png);}
