--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
-body {background-color: white; font-size: 16px; font-family: 'IM Fell English', serif; color: #333; }
+body {background-color: white; font-size: 16px; font-family: 'IM Fell English', "Helvetica", serif; color: #333; font-display: swap;}
 header {margin-bottom: 1.0em; font-family: 'IM Fell English', serif;}
 
 h1,h2,h3 {margin: 0; padding: 0; font-weight: 900; color: black;}
@@ -108,7 +108,7 @@ a.goToTop {display: none;}
   nav ul li#cv a:before{content: '⇩ DOWNLOAD ';}
   
   #ppp_filter {width: 100%;}
-  #ppp_filter li {padding: 0; margin: 0 0 0.5em 0; border: 1px solid white; width: 20%; text-align: center; height: 3.5em; display: inline-block; border-bottom: none; vertical-align: bottom;}
+  #ppp_filter li {padding: 0; margin: 0 0 0.5em 0; border: 1px solid white; width: 19%; text-align: center; height: 3.5em; display: inline-block; border-bottom: 2px solid #ccccff; vertical-align: bottom;}
   #ppp_filter li.ppp_active {background-color: #eee;}
   #ppp_filter li a {padding: 1.0em 0 0 0; height: 100%; width: 100%; display: inline-block;}
   #ppp_filter li:hover:not(.ppp_active) {border: 1px dotted blue;}
