--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@
 body {background-color: white; font-size: 16px; font-family: 'IM Fell English', "Helvetica", serif; color: #333; font-display: swap;}
 header {margin-bottom: 1.0em; font-family: 'IM Fell English', serif;}
 
-h1,h2,h3 {margin: 0; padding: 0; font-weight: 900; color: black;}
+h1,h2,h3 {margin: 0; padding: 0; font-weight: 900; color: #333;}
 h1 {color: #031fc9;}
 section {margin-right: 210px;}
 img#mugShot {width: 200px; padding: 2px; border: 1px solid #003366; position: fixed; right: 5px; top: 5px; z-index: 2;}
 
-header h3 a {color: black; text-decoration: none;}
+header h3 a {color: #333; text-decoration: none;}
 header h3 a:hover {color: #031fc9; text-decoration: underline;}
 
 li.uf {list-style-image: url(bullet_uf.png);}
@@ -44,7 +44,7 @@ body section > ul > li {margin-bottom: 0.25em;}
 
 /* Filtering of papers, posters, and presentations */
 #ppp {margin: 1.0em 0 1.0em 0; clear: both;}
-#ppp.unfiltered li:nth-child(even) {background-color: #f0f0ff;border-bottom: 1px solid #e7e7ff;}
+#ppp.unfiltered li:nth-child(even) {background-color: #f0f0ff; border-bottom: 1px solid #e7e7ff;}
 /*
 #ppp.unfiltered li:not(.hidden):nth-child(even) {background-color: #f0f0ff;border-bottom: 1px solid #e7e7ff;}
 #ppp.filtered li:not(.hidden):nth-child(even) {background-color: #f0f0ff;border-bottom: 1px solid #e7e7ff;}
@@ -64,6 +64,8 @@ sub.texE {text-transform: uppercase; vertical-align: -0.5ex;  margin-left: -0.16
 a.goToTop {display: none;}
 
 .hide {display: none;}
+
+h3#advisor {margin-right: 200px;}
 
 @media only screen and (min-width: 100px) and (max-width: 650px) {
   img#mugShot {position: relative; top: auto; right: auto; margin: 0 auto; display: block;}
@@ -86,6 +88,7 @@ a.goToTop {display: none;}
   section ul li {margin-bottom: 1.0em;}
   section#courseworkHistory {width: 80%;}
   section#courseworkHistory ul {list-style-type: disc; margin-left: 1.0em;}
+  section#courseworkHistory ul ul {margin-left: -2.0em;}
   section#courseworkHistory ul ul li {margin-bottom: 0;}
   
   .pinned {background: linear-gradient(to bottom, rgba(255,255,255,1) 80%, rgba(255,255,255,0) 100%); position: fixed; z-index: 3; top: 0; width: 100%; padding-bottom: 1.5em;}
@@ -112,4 +115,6 @@ a.goToTop {display: none;}
   #ppp_filter li.ppp_active {background-color: #eee;}
   #ppp_filter li a {padding: 1.0em 0 0 0; height: 100%; width: 100%; display: inline-block;}
   #ppp_filter li:hover:not(.ppp_active) {border: 1px dotted blue;}
+  header:not(.pinned) h3#advisor {margin-right: auto;}
+  header:not(.pinned) h3#advisor span {display: block; color: transparent; clear: both; height: 0px;}
 }
