--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
+@font-face {
+  font-family: 'IM Fell English';
+  font-style: normal;
+  font-weight: 400;
+  src: url(./_font/manrope-medium.woff2) format('woff2')
+}
+
 body {background-color: white; font-size: 16px; font-family: 'IM Fell English', "Helvetica", serif; color: #333; font-display: swap;}
 header {margin-bottom: 1.0em; font-family: 'IM Fell English', serif;}
 
@@ -117,4 +124,18 @@ h3#advisor {margin-right: 200px;}
   #ppp_filter li:hover:not(.ppp_active) {border: 1px dotted blue;}
   header:not(.pinned) h3#advisor {margin-right: auto;}
   header:not(.pinned) h3#advisor span {display: block; color: transparent; clear: both; height: 0px;}
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #111;
+        color: white;
+    }
+    h1, h2, h3 {color: #ddd;}
+    #ppp.unfiltered li:nth-child(even) {background-color: #222; border-bottom: none;}
+    header h3 a {color: inherit; text-decoration: none;}
+    header h3 a:hover {color: #031fc9; text-decoration: underline;}
+    
+    #ppp a {color: inherit;}
+    em.me {font-weight: bolder; font-style: normal; color: #0000ff;}
 }
