--- a/style.css
+++ b/style.css
@@ -6,9 +6,15 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
+@font-face {
+  font-family: 'Manrope Medium';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Manrope Medium'), local('Manrope-medium'), url(./_font/manrope-medium.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
 
-
-body {background-color: white; font-size: 16px; font-family: 'IM Fell English', "Helvetica", serif; color: #333; font-display: swap;}
+body {background-color: white; font-size: 16px; font-family: Georgia, Times, ‘Times New Roman’, serif; color: #333; font-display: swap;}
 header {margin-bottom: 1.0em; font-family: 'IM Fell English', serif;}
 
 h1,h2,h3 {margin: 0; padding: 0; font-weight: 900; color: #333;}
@@ -23,11 +29,12 @@ li.uf {list-style-image: url(bullet_uf.png);}
 li.odu {list-style-image: url(bullet_odu.png);}
 li.citadel {list-style-image: url(bullet_citadel.png);}
 li.oduphd {list-style-image: url(bullet_oduphd.png);}
+li.drexel {list-style-image: url(bullet_drexel.png);}
 
 ul li ul li {list-style-image: none;} /* only show icon for semesters, not courses */
 a {color: #031fc9;}
 nav {position: fixed; right: 5px; top: 205px; text-align: center; z-index: 2;}
-nav ul {list-style-type: none; width: 206px; }
+nav ul {list-style-type: none; width: 206px;}
 nav ul#sections li {margin: 0; padding: 0; border-bottom: 1px dashed #003366;}
 nav ul#sections li a {text-decoration: none; color: #031fc9; font-weight: bold; font-family: 'IM Fell English', sans-serif; font-size: 0.8em; display: block;}
 nav ul#sections li a:hover {color: white; background-color: #031fc9;}
@@ -40,6 +47,7 @@ nav ul li#cv a {border: 1px solid #031fc9; border-radius: 10px; background-color
 em.me {font-weight: bolder; font-style: normal; color: #000099;}
 em.best {font-weight: bolder; color: #FA4616;}
 
+body section > ul {padding-left: 2.0em;}
 body section > ul > li {margin-bottom: 0.25em;}
 
 #openMenu {display: none;}
@@ -86,8 +94,9 @@ h3#advisor {margin-right: 200px;}
   header {margin-bottom: 0;}
   a.goToTop {display: inline; margin-left: 1.0em; font-size: 0.8em; color: white; background-color: blue; text-decoration: none; font-family: sans-serif; white-space: nowrap;}
   section {width: 100%;}
-  section ul {list-style-type: none; margin-left: 0;}
-  section ul li {margin-bottom: 1.0em;}
+  section ul {list-style-type: none; margin: 0.5em auto 0.5em 0.5em;}
+  section ul li {margin: 0 1.0em 1.5em 1.0em; list-style-type: circle;}
+  section#papersPostersAndPresentations ul li {margin-left: 0; margin-bottom: 0.5em;}
   section#courseworkHistory {width: 80%;}
   section#courseworkHistory ul {list-style-type: disc; margin-left: 1.0em;}
   section#courseworkHistory ul ul {margin-left: -2.0em;}
@@ -110,7 +119,8 @@ h3#advisor {margin-right: 200px;}
   section {position: relative; z-index: 2;}
   nav ul li#cv {font-size: 1.0em; margin-top: 1.0em; border: 0; text-align center;}
   nav ul li#cv a {padding-left: 1.0em;}
-  nav ul li#cv a:before{content: '⇩ DOWNLOAD ';}
+  nav ul li#cv a:before{content: '⤓ DOWNLOAD ';}
+  nav ul li#cv {border: 1px solid #031fc9; border-radius: 10px; background-color: inherit;}
   
   #ppp_filter {width: 100%;}
   #ppp_filter li {padding: 0; margin: 0 0 0.5em 0; border: 1px solid white; width: 19%; text-align: center; height: 3.5em; display: inline-block; border-bottom: 2px solid #ccccff; vertical-align: bottom;}
@@ -119,6 +129,10 @@ h3#advisor {margin-right: 200px;}
   #ppp_filter li:hover:not(.ppp_active) {border: 1px dotted blue;}
   header:not(.pinned) h3#advisor {margin-right: auto;}
   header:not(.pinned) h3#advisor span {display: block; color: transparent; clear: both; height: 0px;}
+
+  li.uf, li.odu, li.citadel, li.oduphd, li.drexel {list-style-image: none;}
+  body section > ul { padding: 0;}
+  em.best {white-space: nowrap;}
 }
 
 @media (prefers-color-scheme: dark) {
@@ -134,17 +148,17 @@ h3#advisor {margin-right: 200px;}
     header h3 a {color: inherit; text-decoration: none;}
     header h3 a:hover {color: #FA4616; text-decoration: underline;}
     
-    nav ul#sections li a {color: #FA4616;}
+    nav ul#sections li a {color: #FA4616; padding-left: 0.5em;}
     nav ul#sections li a:hover {color: white; background-color: #FA4616;}
     nav ul#sections li {border-bottom: 1px dashed #FA4616;}
-    nav ul li#cv {border-bottom: none;}
-    nav ul li#cv a {border: 1px solid #FA4616;}
+    nav ul li#cv {border-bottom: none; background-color: inherit;}
+    nav ul li#cv a {border: 1px solid #FA4616; background-color: white;}
     #ppp a {color: #FA4616;}
     em.me {font-weight: bolder; font-style: normal; color: #FA4616;}
     
     img#mugShot {border: 1px solid #FA4616;}
     
-    em.best {color: #0021A5;}
+    em.best {color: #0021A5; }
     
     #ppp_filter li:hover:not(.ppp_active) {border: 1px dotted #FA4616;}
 }
@@ -152,4 +166,5 @@ h3#advisor {margin-right: 200px;}
 
 @media only screen and (min-width: 100px) and (max-width: 650px) and (prefers-color-scheme: dark) {
  .pinned {background: linear-gradient(to bottom, rgb(33,33,33,1) 80%, rgba(255,255,255,0) 100%); position: fixed; z-index: 3; top: 0; width: 100%; padding-bottom: 1.5em;}
+ nav ul li#cv {background-color: white;}
 }
